--- a/aboutus.html
+++ b/aboutus.html
@@ -23,6 +23,40 @@
       </head>
 
       <body>
+
+        <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+          <div class="container">
+            <a class="navbar-brand mr-auto" href="./index.html">
+              Ristorante Con Fusion
+            </a>
+
+            <div id="NavBar" class="collapse navbar-collapse">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="./index.html">Home</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Menu</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
+              </ul>
+            </div>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#NavBar"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+        </nav>
+
         <header class="jumbotron">
           <div class="container">
             <div class="row row-header">
@@ -41,6 +75,11 @@
 
         <div class="container">
           <div class="row">
+            <ol class="col-12 breadcrumb">
+              <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+              <li class="breadcrumb-item active">About Us</li>
+
+            </ol>
             <div class="col-12">
               <h3>About Us</h3>
               <hr />
