--- a/aboutus.html
+++ b/aboutus.html
@@ -9,13 +9,12 @@
           name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
+        <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
         <!-- Bootstrap CSS -->
         <link
           rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-          crossorigin="anonymous"
+          href="node_modules/bootstrap/dist/css/bootstrap.min.css"
         />
         <!-- Font Awesome  CSS -->
         <link
@@ -28,37 +27,35 @@
         />
         <!-- Custom Stylesheet -->
         <link rel="stylesheet" href="css/styles.css" />
-
-        <title>Ristorante Con Fusion: About Us</title>
       </head>
 
       <body>
 
         <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-auto" href="./index.html">
+            <a class="navbar-brand" href="./index.html">
               Ristorante Con Fusion
             </a>
             <div id="NavBar" class="collapse navbar-collapse">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                   <a class="nav-link" href="./index.html">
-                    <span class="fa fa-home fa-lg"></span>Home
+                    <span class="fa fa-home fa-lg"></span> Home
                   </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="#">
-                    <span class="fa fa-info fa-lg"></span>About</a
+                    <span class="fa fa-info fa-lg"></span> About</a
                   >
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">
-                    <span class="fa fa-list fa-lg"></span>Menu
+                    <span class="fa fa-list fa-lg"></span> Menu
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    <span class="fa fa-address-card fa-lg"></span>Contact
+                  <a class="nav-link" href="./contactus.html">
+                    <span class="fa fa-address-card fa-lg"></span> Contact
                   </a>
                 </li>
               </ul>
@@ -243,23 +240,10 @@
           </div>
         </footer>
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script
-          src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-          integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-          crossorigin="anonymous"
-        ></script>
-        <script
-          src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-          integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-          crossorigin="anonymous"
-        ></script>
-        <script
-          src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-          integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-          crossorigin="anonymous"
-        ></script
+        <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script
 
       </body>
     </html>
