--- a/contactus.html
+++ b/contactus.html
@@ -133,6 +133,7 @@
         </div>
       </div>
 
+      <!-- Form: Feedback -->
       <div class="row row-content">
         <div class="col-12">
           <h3>Send us your Feedback</h3>
@@ -140,19 +141,21 @@
         <div class="col-12 col-md-9">
           <form>
             <div class="form-group row">
-                <label for="firstname" class="col-md-2 col-form-label"
-                  >First Name</label
-                >
-                <div class="col-md-10">
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="firstname"
-                    name="firstname"
-                    placeholder="First Name"
-                  />
-                </div>
+              <label for="firstname" class="col-md-2 col-form-label"
+                >First Name</label
+              >
+              <div class="col-md-10">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="firstname"
+                  name="firstname"
+                  placeholder="First Name"
+                />
               </div>
+            </div>
+            <!-- .form-group -->
+
             <div class="form-group row">
               <label for="lastname" class="col-md-2 col-form-label"
                 >Last Name</label
@@ -167,6 +170,7 @@
                 />
               </div>
             </div>
+            <!-- .form-group -->
 
             <div class="form-group row">
               <label for="telnum" class="col-12 col-md-2 col-form-label"
@@ -191,6 +195,7 @@
                 />
               </div>
             </div>
+            <!-- .form-group -->
 
             <div class="form-group row">
               <label for="email" class="col-md-2 col-form-label">Email</label>
@@ -204,12 +209,18 @@
                 />
               </div>
             </div>
+            <!-- .form-group -->
 
             <div class="form-group row">
               <div class="col-md-6 offset-md-2">
                 <div class="form-check">
-                  <input type="checkbox" class="form-check-input" 
-                        name="approve" id="approve" value=""/>
+                  <input
+                    type="checkbox"
+                    class="form-check-input"
+                    name="approve"
+                    id="approve"
+                    value=""
+                  />
                   <label class="form-check-label" for="approve">
                     <strong>May we contact you?</strong>
                   </label>
@@ -222,18 +233,23 @@
                 </select>
               </div>
             </div>
+            <!-- .form-group -->
 
             <div class="form-group row">
-              <label for="feedback" class="col-md-2 col-form-label">Your Feedback</label>
+              <label for="feedback" class="col-md-2 col-form-label"
+                >Your Feedback</label
+              >
               <div class="col-md-10">
                 <textarea
                   class="form-control"
                   id="feedback"
                   name="feedback"
-                  rows="12">
+                  rows="12"
+                >
                 </textarea>
               </div>
             </div>
+            <!-- .form-group -->
 
             <div class="form-group row">
               <div class="offset-md-2 col-md-10">
@@ -242,8 +258,7 @@
                 </button>
               </div>
             </div>
-
-            </div>
+            <!-- .form-group -->
           </form>
         </div>
         <div class="col-12 col-md"></div>
