--- a/contactus.html
+++ b/contactus.html
@@ -40,7 +40,9 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+        <a class="navbar-brand" href="./index.html"
+          ><img src="img/logo.png" height="30" width="41"
+        /></a>
         <div class="collapse navbar-collapse" id="NavBar">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -79,7 +81,9 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col-12 col-sm"></div>
+          <div class="col-12 col-sm align-self-center">
+            <img src="img/logo.png" class="img-fluid" />
+          </div>
         </div>
       </div>
     </header>
