--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
           </div>
         </div>
       </div>
+      <!-- .row .row-content -->
 
       <div class="row row-content align-items-center">
         <div class="col-12 col-sm-4 col-md-3">
@@ -128,6 +129,7 @@
           </p>
         </div>
       </div>
+      <!-- .row .row-content -->
 
       <div class="row row-content align-items-center">
         <div class="col-12 col-sm-4 order-sm-last col-md-3">
@@ -153,7 +155,144 @@
           </div>
         </div>
       </div>
+      <!-- .row .row-content -->
+
+      <div class="row row-content">
+        <div class="col d-flex justify-content-center">
+          <div class="card">
+            <h3 id="reserve-table-header" class="card-header text-white">
+              Reserve a Table (Task 1 by Aaron Jense)
+            </h3>
+            <div class="card-body">
+              <form>
+                <div class="form-group row">
+                  <label class="col-form-label col-md-2" for="guest-options"
+                    ><strong>Number of Guests</strong></label
+                  >
+                  <div id="guest-options" class="col">
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio1"
+                        value="option1"
+                      />
+                      <label class="form-check-label" for="inlineRadio1"
+                        >1</label
+                      >
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio2"
+                        value="option2"
+                      />
+                      <label class="form-check-label" for="inlineRadio2"
+                        >2</label
+                      >
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio3"
+                        value="option3"
+                      />
+                      <label class="form-check-label" for="inlineRadio3"
+                        >3</label
+                      >
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio4"
+                        value="option4"
+                      />
+                      <label class="form-check-label" for="inlineRadio4"
+                        >4</label
+                      >
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio5"
+                        value="option5"
+                      />
+                      <label class="form-check-label" for="inlineRadio5"
+                        >5</label
+                      >
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio6"
+                        value="option6"
+                      />
+                      <label class="form-check-label" for="inlineRadio6"
+                        >6</label
+                      >
+                    </div>
+                  </div>
+                  <!-- #guest-options -->
+                </div>
+                <!-- .form-group .row -->
+
+                <div class="form-group row">
+                  <label class="col-form-label col-md-2" for="date"
+                    ><strong>Date and Time</strong></label
+                  >
+                  <div class="col">
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="date"
+                      name="date"
+                      placeholder="Date"
+                    />
+                  </div>
+                  <!-- label Date-->
+
+                  <div class="col">
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="time"
+                      name="time"
+                      placeholder="Time"
+                    />
+                  </div>
+                </div>
+                <!-- .form-group .row -->
+
+                <div class="form-group row">
+                  <div class="col-md-2 offset-md-2">
+                    <button type="submit" class="btn btn-primary">
+                      Reserve
+                    </button>
+                  </div>
+                </div>
+                <!-- .form-group .row -->
+              </form>
+            </div>
+            <!-- .card-body -->
+          </div>
+          <!-- .card -->
+        </div>
+        <!-- .col (NOTE: center card) -->
+      </div>
+      <!-- .row .row-content -->
     </div>
+    <!-- .container-->
 
     <footer class="footer">
       <div class="container">
