--- a/contactus.html
+++ b/contactus.html
@@ -158,7 +158,7 @@
                 />
               </div>
             </div>
-            <!-- .form-group -->
+            <!-- .form-group .row -->
 
             <div class="form-group row">
               <label for="lastname" class="col-md-2 col-form-label"
