--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
           <div class="col-12 col-sm align-self-center">
             <img src="img/logo.png" class="img-fluid" />
           </div>
+          <div class="col-12 col-sm align-self-center">
+            <a
+              role="button"
+              class="btn reserve-table-btn reserve-table-color"
+              href="#reserve-table-header"
+              >Reserve Table</a
+            >
+          </div>
         </div>
       </div>
     </header>
@@ -120,13 +128,24 @@
           <h3>This Month's Promotions</h3>
         </div>
         <div class="col col-sm col-md">
-          <h2>Weekend Grand Buffet</h2>
-          <p>
-            Featuring mouthwatering combinations with a choice of five different
-            salads, six enticing appetizers, six main entrees and five choicest
-            desserts. Free flowing bubbly and soft drinks. All for just $19.99
-            per person
-          </p>
+          <div class="media">
+            <div class="media-body">
+              <h2 class="mt-0">
+                Weekend Grand Buffet <span class="badge badge-danger">NEW</span>
+              </h2>
+              <p>
+                Featuring mouthwatering combinations with a choice of five
+                different salads, six enticing appetizers, six main entrees and
+                five choicest desserts. Free flowing bubbly and soft drinks. All
+                for just $19.99 per person
+              </p>
+            </div>
+            <img
+              class="d-flex mr-3 img-thumbnail align-self-right"
+              src="img/buffet.png"
+              alt="buffet"
+            />
+          </div>
         </div>
       </div>
       <!-- .row .row-content -->
@@ -160,7 +179,10 @@
       <div class="row row-content">
         <div class="col d-flex justify-content-center">
           <div class="card">
-            <h3 id="reserve-table-header" class="card-header text-white">
+            <h3
+              id="reserve-table-header"
+              class="card-header text-white reserve-table-color"
+            >
               Reserve a Table (Task 1 by Aaron Jense)
             </h3>
             <div class="card-body">
