Tooltip and Modal

--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="./index.html"> Ristorante Con Fusion </a>
+        <a class="navbar-brand" href="#"
+          ><img src="img/logo.png" height="30" width="41"
+        /></a>
         <div id="NavBar" class="collapse navbar-collapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
