--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
                 <li data-target="#mycarousel" data-slide-to="2"></li>
               </ol>
             </div>
+            <!-- .carousel-inner -->
 
+            <!-- Previous and Next Control -->
             <a
               class="carousel-control-prev"
               href="#mycarousel"
@@ -181,6 +183,7 @@
             >
               <span class="carousel-control-prev-icon"></span>
             </a>
+
             <a
               class="carousel-control-next"
               href="#mycarousel"
@@ -189,6 +192,19 @@
             >
               <span class="carousel-control-next-icon"></span>
             </a>
+
+            <!-- Pause and Play Control -->
+            <div class="col">
+              <div class="btn-group" id="carouselButton">
+                <button class="btn btn-danger btn-sm" id="carousel-pause">
+                  <span class="fa fa-pause"></span>
+                </button>
+                <button class="btn btn-danger btn-sm" id="carousel-play">
+                  <span class="fa fa-play"></span>
+                </button>
+              </div>
+              <!-- #carouselButton -->
+            </div>
           </div>
           <!-- #mycarousel -->
         </div>
@@ -557,5 +573,19 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $("#mycarousel").carousel({ interval: 2000 });
+
+        $("#carousel-pause").click(function () {
+          $("#mycarousel").carousel("pause");
+        });
+
+        $("#carousel-play").click(function () {
+          $("#mycarousel").carousel("cycle");
+        });
+      });
+    </script>
   </body>
 </html>
