Add Non-Smoking Section Button as default

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                   ><strong>Section</strong></label
                 >
                 <div class="col">
-                  <button type="button" class="btn btn-success">
+                  <button type="button" class="btn btn-success active">
                     Non-Smoking
                   </button>
                   <button type="button" class="btn btn-danger">Smoking</button>
