Fix button group for section selection

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                 <label class="col-form-label col-md-2" for="date"
                   ><strong>Section</strong></label
                 >
-                <div class="col">
+                <div class="btn-group" data-toggle="buttons">
                   <button type="button" class="btn btn-success active">
                     Non-Smoking
                   </button>
